--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.36.0",
     "@splinetool/react-spline": "^2.2.6",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
